Desafios da aula 1 (#4)
* feat: update from master

* fix: Readme format

* feat: first class doc and changes to API URL

* feat: using ansi colors for println

Also using emojis for ratings on movies

* feat: move api url to .properties file

a file called `application.properties` should be placed  at the root
of the project.

* feat: replaced custom json parser with Jackson

Co-authored-by: Lucas Ramos <lucas.nogueira.gft@youse.com.br>